update pkg version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rduk/map-google-provider",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Google Maps implementation of RDUK Map Provider",
   "engines": {
     "node": ">=6.4.0"
@@ -27,10 +27,13 @@
   "license": "MIT",
   "dependencies": {
     "@google/maps": "0.4.5",
-    "@rduk/configuration": "2.2.0",
-    "@rduk/map": "0.0.1"
+    "@rduk/map": "0.0.2"
+  },
+  "peerDependencies": {
+    "@rduk/configuration": "2.x"
   },
   "devDependencies": {
+    "@rduk/configuration": "2.x",
     "dotenv": "5.0.0",
     "standard": "10.0.3"
   }
